settings page update
